<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_brouser"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/brouser" />
        <item
            android:id="@+id/nav_web_view"
            android:icon="@drawable/ic_web_foreground"
            android:title="@string/web" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_robot_foreground"
            android:title="@string/data" />
        <item
            android:id="@+id/nav_barometer"
            android:icon="@drawable/ic_robot_foreground"
            android:title="@string/barometer" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_robot_foreground"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_mic"
            android:icon="@drawable/ic_robot_foreground"
            android:title="@string/mic" />
    </group>
</menu>